Attempted fix on ios background color rotate issue in light mode.

--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,6 @@ ul li ul:focus {
 }
 
 html[data-theme='light'] {
-    background: hsl(var(--fgcol0));
     filter: invert(1) hue-rotate(180deg);
 }
 
